@@ -1,3 +1,4 @@
+* Assume test_helper is in load path when running tests [cody]
 * Add support Kunaki rating service [cody]
 * Require active_support instead of activesupport to avoid deprecation warning in Rails 2.3.5 [cody]
 * Remove ftools for Rails 1.9 compatibility and remove xml logging, as logging is now included in the connection [cody]
